Upload google colab for social media addiction analysis

--- a/social_media_addiction_classification.ipynb
+++ b/social_media_addiction_classification.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyO6+3aFcxAi8sqyhZTxzvGa",
+      "authorship_tag": "ABX9TyNAt3ba5NlqNhxguZcfoQ8C",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -1526,7 +1526,7 @@
         "# To check the 2 outliers in avg_daily_usage_hours if its significance enough if its deleted\n",
         "\n",
         "# Get bounds using IQR\n",
-        "col = 'avg_daily_usage_hours' # to make it easy being called\n",
+        "col = 'avg_daily_usage_hours'\n",
         "Q1 = df[col].quantile(0.25)\n",
         "Q3 = df[col].quantile(0.75)\n",
         "IQR = Q3 - Q1\n",
@@ -1619,7 +1619,7 @@
         "import seaborn as sns\n",
         "import matplotlib.pyplot as plt\n",
         "\n",
-        "corr = df.corr(numeric_only=True)  # Only numeric columns\n",
+        "corr = df.corr(numeric_only=True)\n",
         "plt.figure(figsize=(10, 8))\n",
         "sns.heatmap(corr, annot=True, cmap='coolwarm')\n",
         "plt.title(\"Feature Correlation Matrix\")\n",
@@ -1678,7 +1678,7 @@
       "cell_type": "code",
       "source": [
         "import pandas as pd\n",
-        "from sklearn.preprocessing import StandardScaler # untuk standarisasi (lihat catatan)\n",
+        "from sklearn.preprocessing import StandardScaler\n",
         "from sklearn.model_selection import train_test_split\n",
         "from sklearn.linear_model import LogisticRegression\n",
         "from sklearn.metrics import accuracy_score, classification_report, confusion_matrix\n",
@@ -1990,7 +1990,7 @@
       "cell_type": "code",
       "source": [
         "from sklearn.inspection import permutation_importance\n",
-        "from sklearn.neighbors import KNeighborsClassifier  # For classification\n",
+        "from sklearn.neighbors import KNeighborsClassifier\n",
         "\n",
         "# Define the KNN model with a specific number of neighbors (e.g., 5)\n",
         "knn_model = KNeighborsClassifier(n_neighbors=5)\n",
